--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 Hello World
+You're not real. You operate within a definition of self and separateness--"thingness"--that is an illusion created by the brain. You're not actually a thing or individual. There is no you--there are just flashes of awareness of stimuli, some of which overlap with other so-called "selves."
+ 
+The difference between "you"--what most people define as their bodies, minds, or brains--and this water bottle sitting on my desk is a matter of degree, not of type. You are not fundamentally separate from anything, and therefore do not exist--the very idea of existing is an illusory concept that we maintain because of usefulness rather than its truth. You're an extension of your parents, of their germ cells and their ideas, words, and actions--as well as those of every other "being" and "thing" you've ever encountered.
+ 
+Even within "your" mind, there is no unified, comprehensive self. There are vast numbers of neural networks, resulting in constantly conflicting desires, emotions, memories, and thoughts. One or another always outvotes the others, but there is no synchronized self. And if you feel that you are somehow separate from other "selves," this perception is only due to improper modeling of reality; if I connected your brain to another's in the right way, that illusion would disappear.
+ 
+The idea of things as units with identities or essences is only a mental heuristic. The reality of all things is this: a heaving sea of undifferentiated forces and particles--and even this, my description, is only an idea that points at that reality; it cannot actually be described.
+
+Form is emptiness; emptiness is form.
+ 
+Viewed in this way, from one perspective "you" are nothing, nonexistent; from another, "you" consist of the entire universe, overlapping with all other things that consider themselves to exist.
